poc1/windows-gateway/windows-alias-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: windows
  namespace: windows
  labels:
    app: windows
spec:
  selector:
    istio: windows-gateway
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
